--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -244,6 +244,7 @@ button {
     flex-direction: column;
     max-height: 300px;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 #add-payload-field {
@@ -472,7 +473,7 @@ button {
 
 #dispatch-history-table thead {
     background-color: var(--header-bg);
-    color: var(--text);
+    color: #fff;
     text-align: left;
 }
 
@@ -699,7 +700,7 @@ button:disabled {
 }
 
 #dispatch-history-table-wrapper {
-    max-height: 400px;
+    max-height: 540px;
     overflow-y: auto;
 }
 
